--- a/incl/main/grafisk_losning/eksistens.tex
+++ b/incl/main/grafisk_losning/eksistens.tex
@@ -9,8 +9,8 @@ Et polyeder $\mathcal{P} \in \R^n$ indeholder en \textbf{uendelig linje}, hvis d
 \noindent
 %
 \textcolor{red}{
-På figur \ref{fig:julieerovergud1} ses et polyeder $\mathcal{P}$, hvor $\mathbf{x} + \lambda \mathbf{d}$ ikke tilhører $\mathcal{P}$, og dermed indeholder polyederet ikke en linje. 
-Hvorimod på figur \ref{fig:julieerovergud2} ses et polyeder $\mathcal{P}_2$, hvor $\mathbf{x} + \lambda \mathbf{d}$ tilhører $\mathcal{P}_2$, og dermed indeholder polyederet en linje.
+På figur \ref{fig:julieerovergud1} ses et polyeder $\mathcal{P}$, hvor $\mathbf{x} + \lambda \mathbf{d}$ ikke tilhører $\mathcal{P}$, hvormed polyederet ikke indeholder en linje. 
+På figur \ref{fig:julieerovergud2} ses et polyeder $\mathcal{P}_2$, hvor $\mathbf{x} + \lambda \mathbf{d}$ derimod tilhører $\mathcal{P}_2$, således polyederet indeholder en linje.
 }
 \\\\
 \begin{center}
