--- a/incl/main/simplex_metoden/konstruktion_metod.tex
+++ b/incl/main/simplex_metoden/konstruktion_metod.tex
@@ -4,13 +4,13 @@
 %Simplexmetoden afsøger dermed hjørnerne på denne vis, hvis de ikke er degenererede basale mulige løsninger.
 %Dermed vil en optimal basismatrix sikre en løsning indenfor løsningsmængden. % er lidt i tvivl om denne sætning er helt rigtigt.
 %bla bla 
-Afsnit \ref{julieerfantalastiskogvidunderlig} belyser at simplexmetoden finder basale retninger, som reducere omkostningen i objektfunktionen. 
+Afsnit \ref{julieerfantalastiskogvidunderlig} belyser, at simplexmetoden finder basale retninger, som reducerer omkostningerne i objektfunktionen. 
 Med optimale betingelser undersøges nu, hvilken mulig retning, der skal vælges. 
 Omkostningsvektoren $\mathbf{c}^*$ udregnes for en given basal mulig løsning. 
-Hvis ingen basale retninger vil reducerer omkostningen  er løsningen optimal. 
-Hvis den reducerede omkostning $c^*_j$ er negativ, for en mulige retning $\mathbf{d}$, følges denne retning. 
+Hvis ingen basale retninger kan reducere omkostningen, er løsningen optimal. 
+Hvis den reducerede omkostning $c^*_j$ er negativ for en mulig retning $\mathbf{d}$, vælges denne retning. 
 Hermed vil $x_j$ stige, og de resterende ikke-basale variable fastholdes.
-Eftersom det ønskes at minimere omkostningen, bevæges der så langt væk som muligt fra $\mathbf{x}$, så omkostningen falder.
+Eftersom der søges at minimere omkostningen, bevæges der så langt væk som muligt fra $\mathbf{x}$, så omkostningen falder.
 Det ønskes dermed at finde den største skalar
 \begin{align*}
 \theta^* = \max \{ \theta \geq 0 \mid \textbf{x} + \theta^*\textbf{d} \in \mathcal{P} \},
@@ -18,7 +18,7 @@ Det ønskes dermed at finde den største skalar
 %
 der opfylder, at $\mathbf{x} + \theta^* \mathbf{d}$ er en mulig løsning.
 % Nu kan vi eventuelt udelede \theta^* xD 
-Herefter beregnes omkostningsvektoren for den nye mulige løsning, og samme procedure gentages. Sådan forsættes dette indtil, at ingen basale retninger reducere omkostningen, og løsningen dermed er optimal.
+Herefter beregnes omkostningsvektoren for den nye mulige løsning, og samme procedure gentages. Dette forsættes, indtil ingen basale retninger reducerer omkostningen, og løsningen dermed er optimal.
 %\\\\
 % Vi kan eventuelt her beskrive kort med ord den formel som bliver brugt i den naive implimentering 
 %
