--- a/incl/main/simplex_metoden/kompleksitet.tex
+++ b/incl/main/simplex_metoden/kompleksitet.tex
@@ -2,7 +2,7 @@
 \label{kompleksitet}
 % hehi
 Et vigtigt kriterium for valg af simplexmetoden er tidskompleksitet.
-Til beskrivelse af dette benyttes \textit{store-$O$} notation.
+Til beskrivelse af dette benyttes \textit{store-$O$} notation \citep[side 205]{dmat}.
 %
 \begin{defn}{}{}
 Lad $f(x)$ og $g(x)$ være vilkårlige funktioner. $f(x)$ er \textbf{store-$O$} af $g(x)$, hvis der eksisterer et $C$ og $k$, således at $|f(x)| \leq C|g(x)|, x \geq k$. $C$ og $k$ kaldes \textbf{vidner}.
